argocd/network/unifi/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    metallb.universe.tf/address-pool: metallb-pool-reserved
    metallb.universe.tf/ip-allocated-from-pool: metallb-pool-reserved
  name: unifi-ext
  namespace: unifi
spec:
  allocateLoadBalancerNodePorts: true
  externalTrafficPolicy: Cluster
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  loadBalancerIP: 10.10.20.202
  ports:
  - name: controller
    port: 8080
    protocol: TCP
    targetPort: 8080
  - name: discovery
    port: 10001
    protocol: UDP
    targetPort: 10001
  - name: http
    port: 8443
    protocol: TCP
    targetPort: 8443
  - name: speedtest
    port: 6789
    protocol: TCP
    targetPort: 6789
  - name: stun
    port: 3478
    protocol: UDP
    targetPort: 3478
  - name: syslog
    port: 5514
    protocol: UDP
    targetPort: 5514
  selector:
    app.kubernetes.io/component: main
    app.kubernetes.io/instance: unifi
    app.kubernetes.io/name: unifi
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 10.10.20.202
